# sistema_distribuido_lenguaje_programacion

./: README.md
api-crud/routes/: api.php
autenticacion_fastapi/: .env.database  .gitignore  Dockerfile  config_entorno.py  crear_token.py  docker-compose.yml  main.py  requeriments.txt
autenticacion_fastapi/config/: database.py  settings.py
autenticacion_fastapi/controllers/: authControllers.py  userControllers.py
autenticacion_fastapi/models/: user.py
autenticacion_fastapi/routers/: userRoutes.py
autenticacion_fastapi/schemas/: user.py
autenticacion_fastapi/service/: email_service.py  pending_users.py  verificacion_store.py
autenticacion_fastapi/utils/: jwt_utils.py
front/: package.json
front/src/: App.vue
front/src/pages/: inventario.vue  login.vue
inventory-service/: .dockerignore  .env  Cargo.toml  Dockerfile  docker-compose.yml  init.sql  inventory.json
inventory-service/src/: auth.rs  database.rs  handlers.rs  init_db.rs  main.rs  models.rs  routes.rs
vue-project/: README.md  index.html  package-lock.json  package.json
vue-project/src/: App.vue  style.css
vue-project/src/config/: api.ts
vue-project/src/pages/: CheckerDashboard.vue  CustomerShopPage.vue  LoginPage.vue  ManagerDashboard.vue  NotFoundPage.vue  ProductsPage.vue  RegisterPage.vue  VerifyEmailPage.vue
vue-project/src/router/: index.ts
vue-project/src/stores/: auth.ts  cart.ts  inventory.ts
